// Vitest Snapshot v1

exports[`NoticeBar > NoticeBar controllerVue demo works fine 1`] = `
<div
  class="noticebar-demo"
>
  <div
    class="tdesign-mobile-demo-block"
  >
    <!--v-if-->
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      带操作公告栏
    </p>
    
    <div
      class="t-notice-bar t-notice-bar--info"
    >
      <div
        class="t-notice-bar__inner"
      >
        <div
          class="t-notice-bar__hd"
        >
          <svg
            class="t-icon t-icon-info-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
        <div
          class="t-notice-bar__bd"
        >
          <div
            class="t-notice-bar__list"
          >
            <div
              class="t-notice-bar__item"
              style=""
            >
              <span
                class="t-notice-bar__text"
              >
                提示文字描述提示文字描述提示文字描述 
                <!--v-if-->
              </span>
            </div>
          </div>
        </div>
        <!--v-if-->
      </div>
    </div>
    <div
      class="t-notice-bar t-notice-bar--info"
    >
      <div
        class="t-notice-bar__inner"
      >
        <div
          class="t-notice-bar__hd"
        >
          <svg
            class="t-icon t-icon-info-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
        <div
          class="t-notice-bar__bd"
        >
          <div
            class="t-notice-bar__list"
          >
            <div
              class="t-notice-bar__item t-notice-bar__item-detail"
              style=""
            >
              <span
                class="t-notice-bar__text"
              >
                提示文字描述提示文字描述 
                <span
                  class="t-notice-bar__text-detail"
                >
                  详情
                </span>
              </span>
            </div>
          </div>
        </div>
        <!--v-if-->
      </div>
    </div>
    
  </div>
</div>
`;

exports[`NoticeBar > NoticeBar eventVue demo works fine 1`] = `
<div
  class="noticebar-demo"
>
  <div
    class="tdesign-mobile-demo-block"
  >
    <h2
      class="tdesign-mobile-demo-block__title"
    >
      事件
    </h2>
    <!--v-if-->
    
    <button
      aria-disabled="false"
      class="t-button t-size-m t-button--base t-button--default t-button--shape-rectangle"
      role="button"
    >
      <!---->
      <span
        class="t-button__text"
      >
        
        显示/隐藏
        
      </span>
    </button>
    <div
      class="t-notice-bar t-notice-bar--info"
    >
      <div
        class="t-notice-bar__inner"
      >
        <div
          class="t-notice-bar__hd"
        >
          <svg
            class="t-icon t-icon-info-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
        <div
          class="t-notice-bar__bd"
        >
          <div
            class="t-notice-bar__list"
          >
            <div
              class="t-notice-bar__item t-notice-bar__item-detail"
              style=""
            >
              <span
                class="t-notice-bar__text"
              >
                提示文字描述提示文字描述提示文字描述提示文字描述提示文字描述 
                <span
                  class="t-notice-bar__text-detail"
                >
                  详情
                </span>
              </span>
            </div>
          </div>
        </div>
        <div
          class="t-notice-bar__ft"
        >
          <svg
            class="t-icon t-icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
      </div>
    </div>
    
  </div>
</div>
`;

exports[`NoticeBar > NoticeBar iconVue demo works fine 1`] = `
<div
  class="noticebar-demo"
>
  <div
    class="tdesign-mobile-demo-block"
  >
    <!--v-if-->
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      带图标静态公告栏
    </p>
    
    <div
      class="t-notice-bar t-notice-bar--info"
    >
      <div
        class="t-notice-bar__inner"
      >
        <div
          class="t-notice-bar__hd"
        >
          <svg
            class="t-icon t-icon-info-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
        <div
          class="t-notice-bar__bd"
        >
          <div
            class="t-notice-bar__list"
          >
            <div
              class="t-notice-bar__item"
              style=""
            >
              <span
                class="t-notice-bar__text"
              >
                提示文字描述提示文字描述提示文字描述 
                <!--v-if-->
              </span>
            </div>
          </div>
        </div>
        <!--v-if-->
      </div>
    </div>
    
  </div>
</div>
`;

exports[`NoticeBar > NoticeBar mobileVue demo works fine 1`] = `
<div
  class="noticebar-demo"
>
  <div
    class="tdesign-mobile-demo-block"
  >
    <h2
      class="tdesign-mobile-demo-block__title"
    >
      01 类型
    </h2>
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      静态消息公告栏
    </p>
    
    <div
      class="t-notice-bar t-notice-bar--info"
    >
      <div
        class="t-notice-bar__inner"
      >
        <!--v-if-->
        <div
          class="t-notice-bar__bd"
        >
          <div
            class="t-notice-bar__list"
          >
            <div
              class="t-notice-bar__item"
              style=""
            >
              <span
                class="t-notice-bar__text"
              >
                提示文字描述提示文字描述提示文字描述 
                <!--v-if-->
              </span>
            </div>
          </div>
        </div>
        <!--v-if-->
      </div>
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <!--v-if-->
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      带图标静态公告栏
    </p>
    
    <div
      class="t-notice-bar t-notice-bar--info"
    >
      <div
        class="t-notice-bar__inner"
      >
        <div
          class="t-notice-bar__hd"
        >
          <svg
            class="t-icon t-icon-info-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
        <div
          class="t-notice-bar__bd"
        >
          <div
            class="t-notice-bar__list"
          >
            <div
              class="t-notice-bar__item"
              style=""
            >
              <span
                class="t-notice-bar__text"
              >
                提示文字描述提示文字描述提示文字描述 
                <!--v-if-->
              </span>
            </div>
          </div>
        </div>
        <!--v-if-->
      </div>
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <!--v-if-->
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      滚动公告栏
    </p>
    
    <div
      class="t-notice-bar t-notice-bar--info"
    >
      <div
        class="t-notice-bar__inner"
      >
        <!--v-if-->
        <div
          class="t-notice-bar__bd"
        >
          <div
            class="t-notice-bar__list"
          >
            <div
              class="t-notice-bar__item"
              style=""
            >
              <span
                class="t-notice-bar__text"
              >
                提示文字描述提示文字描述提示文字描述提示文字描提示文字 
                <!--v-if-->
              </span>
            </div>
          </div>
        </div>
        <!--v-if-->
      </div>
    </div>
    <div
      class="t-notice-bar t-notice-bar--info"
    >
      <div
        class="t-notice-bar__inner"
      >
        <div
          class="t-notice-bar__hd"
        >
          <svg
            class="t-icon t-icon-info-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
        <div
          class="t-notice-bar__bd"
        >
          <div
            class="t-notice-bar__list"
          >
            <div
              class="t-notice-bar__item"
              style=""
            >
              <span
                class="t-notice-bar__text"
              >
                提示文字描述提示文字描述提示文字描述提示文字描提示文字 
                <!--v-if-->
              </span>
            </div>
          </div>
        </div>
        <!--v-if-->
      </div>
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <!--v-if-->
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      带操作公告栏
    </p>
    
    <div
      class="t-notice-bar t-notice-bar--info"
    >
      <div
        class="t-notice-bar__inner"
      >
        <div
          class="t-notice-bar__hd"
        >
          <svg
            class="t-icon t-icon-info-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
        <div
          class="t-notice-bar__bd"
        >
          <div
            class="t-notice-bar__list"
          >
            <div
              class="t-notice-bar__item"
              style=""
            >
              <span
                class="t-notice-bar__text"
              >
                提示文字描述提示文字描述提示文字描述 
                <!--v-if-->
              </span>
            </div>
          </div>
        </div>
        <div
          class="t-notice-bar__ft"
        >
          <svg
            class="t-icon t-icon-chevron-right"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="t-notice-bar t-notice-bar--info"
    >
      <div
        class="t-notice-bar__inner"
      >
        <div
          class="t-notice-bar__hd"
        >
          <svg
            class="t-icon t-icon-info-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
        <div
          class="t-notice-bar__bd"
        >
          <div
            class="t-notice-bar__list"
          >
            <div
              class="t-notice-bar__item t-notice-bar__item-detail"
              style=""
            >
              <span
                class="t-notice-bar__text"
              >
                提示文字描述提示文字描述 
                <span
                  class="t-notice-bar__text-detail"
                >
                  详情
                </span>
              </span>
            </div>
          </div>
        </div>
        <div
          class="t-notice-bar__ft"
        >
          <svg
            class="t-icon t-icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
      </div>
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <h2
      class="tdesign-mobile-demo-block__title"
    >
      02 状态
    </h2>
    <!--v-if-->
    
    <div
      class="t-notice-bar t-notice-bar--info"
    >
      <div
        class="t-notice-bar__inner"
      >
        <div
          class="t-notice-bar__hd"
        >
          <svg
            class="t-icon t-icon-info-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
        <div
          class="t-notice-bar__bd"
        >
          <div
            class="t-notice-bar__list"
          >
            <div
              class="t-notice-bar__item"
              style=""
            >
              <span
                class="t-notice-bar__text"
              >
                默认状态公告栏默认状态公告栏 
                <!--v-if-->
              </span>
            </div>
          </div>
        </div>
        <!--v-if-->
      </div>
    </div>
    <div
      class="t-notice-bar t-notice-bar--success"
    >
      <div
        class="t-notice-bar__inner"
      >
        <div
          class="t-notice-bar__hd"
        >
          <svg
            class="t-icon t-icon-check-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 15A7 7 0 108 1a7 7 0 000 14zM4.5 8.2l.7-.7L7 9.3l3.8-3.8.7.7L7 10.7 4.5 8.2z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
        <div
          class="t-notice-bar__bd"
        >
          <div
            class="t-notice-bar__list"
          >
            <div
              class="t-notice-bar__item"
              style=""
            >
              <span
                class="t-notice-bar__text"
              >
                成功状态公告栏成功状态公告栏 
                <!--v-if-->
              </span>
            </div>
          </div>
        </div>
        <!--v-if-->
      </div>
    </div>
    <div
      class="t-notice-bar t-notice-bar--warning"
    >
      <div
        class="t-notice-bar__inner"
      >
        <div
          class="t-notice-bar__hd"
        >
          <svg
            class="t-icon t-icon-info-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
        <div
          class="t-notice-bar__bd"
        >
          <div
            class="t-notice-bar__list"
          >
            <div
              class="t-notice-bar__item"
              style=""
            >
              <span
                class="t-notice-bar__text"
              >
                警示状态公告栏警示状态公告栏 
                <!--v-if-->
              </span>
            </div>
          </div>
        </div>
        <!--v-if-->
      </div>
    </div>
    <div
      class="t-notice-bar t-notice-bar--error"
    >
      <div
        class="t-notice-bar__inner"
      >
        <div
          class="t-notice-bar__hd"
        >
          <svg
            class="t-icon t-icon-close-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
        <div
          class="t-notice-bar__bd"
        >
          <div
            class="t-notice-bar__list"
          >
            <div
              class="t-notice-bar__item"
              style=""
            >
              <span
                class="t-notice-bar__text"
              >
                错误状态公告栏错误状态公告栏 
                <!--v-if-->
              </span>
            </div>
          </div>
        </div>
        <!--v-if-->
      </div>
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <h2
      class="tdesign-mobile-demo-block__title"
    >
      03 多行文字公告栏
    </h2>
    <!--v-if-->
    
    <div
      class="t-notice-bar t-notice-bar--info"
    >
      <div
        class="t-notice-bar__inner"
      >
        <!--v-if-->
        <div
          class="t-notice-bar__bd"
        >
          <div
            class="t-notice-bar__list"
          >
            <div
              class="t-notice-bar__item"
              style=""
            >
              <span
                class="t-notice-bar__text"
              >
                提示文字描述提示文字描述提示文字描述提示文字描述提示文字描述提示文字描述提示文字描述 
                <!--v-if-->
              </span>
            </div>
          </div>
        </div>
        <!--v-if-->
      </div>
    </div>
    <div
      class="t-notice-bar t-notice-bar--info"
    >
      <div
        class="t-notice-bar__inner"
      >
        <div
          class="t-notice-bar__hd"
        >
          <svg
            class="t-icon t-icon-info-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
        <div
          class="t-notice-bar__bd"
        >
          <div
            class="t-notice-bar__list"
          >
            <div
              class="t-notice-bar__item"
              style=""
            >
              <span
                class="t-notice-bar__text"
              >
                提示文字描述提示文字描述提示文字描述提示文字描述提示文字描述提示文字描述提示文字描述 
                <!--v-if-->
              </span>
            </div>
          </div>
        </div>
        <!--v-if-->
      </div>
    </div>
    <div
      class="t-notice-bar t-notice-bar--info"
    >
      <div
        class="t-notice-bar__inner"
      >
        <div
          class="t-notice-bar__hd"
        >
          <svg
            class="t-icon t-icon-info-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
        <div
          class="t-notice-bar__bd"
        >
          <div
            class="t-notice-bar__list"
          >
            <div
              class="t-notice-bar__item"
              style=""
            >
              <span
                class="t-notice-bar__text"
              >
                提示文字描述提示文字描述提示文字描述提示文字描述提示文字描述提示文字描述文字描述文字描述 
                <!--v-if-->
              </span>
            </div>
          </div>
        </div>
        <div
          class="t-notice-bar__ft"
        >
          <svg
            class="t-icon t-icon-chevron-right"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="t-notice-bar t-notice-bar--info"
    >
      <div
        class="t-notice-bar__inner"
      >
        <div
          class="t-notice-bar__hd"
        >
          <svg
            class="t-icon t-icon-info-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
        <div
          class="t-notice-bar__bd"
        >
          <div
            class="t-notice-bar__list"
          >
            <div
              class="t-notice-bar__item t-notice-bar__item-detail"
              style=""
            >
              <span
                class="t-notice-bar__text"
              >
                提示文字描述提示文字描述提示文字描述提示文字描述提示文字描述 
                <span
                  class="t-notice-bar__text-detail"
                >
                  详情
                </span>
              </span>
            </div>
          </div>
        </div>
        <div
          class="t-notice-bar__ft"
        >
          <svg
            class="t-icon t-icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
      </div>
    </div>
    
  </div>
</div>
`;

exports[`NoticeBar > NoticeBar multiLineVue demo works fine 1`] = `
<div
  class="noticebar-demo"
>
  <div
    class="tdesign-mobile-demo-block"
  >
    <h2
      class="tdesign-mobile-demo-block__title"
    >
      03 多行文字公告栏
    </h2>
    <!--v-if-->
    
    <div
      class="t-notice-bar t-notice-bar--info"
    >
      <div
        class="t-notice-bar__inner"
      >
        <!--v-if-->
        <div
          class="t-notice-bar__bd"
        >
          <div
            class="t-notice-bar__list"
          >
            <div
              class="t-notice-bar__item"
              style=""
            >
              <span
                class="t-notice-bar__text"
              >
                提示文字描述提示文字描述提示文字描述提示文字描述提示文字描述提示文字描述提示文字描述 
                <!--v-if-->
              </span>
            </div>
          </div>
        </div>
        <!--v-if-->
      </div>
    </div>
    <div
      class="t-notice-bar t-notice-bar--info"
    >
      <div
        class="t-notice-bar__inner"
      >
        <div
          class="t-notice-bar__hd"
        >
          <svg
            class="t-icon t-icon-info-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
        <div
          class="t-notice-bar__bd"
        >
          <div
            class="t-notice-bar__list"
          >
            <div
              class="t-notice-bar__item"
              style=""
            >
              <span
                class="t-notice-bar__text"
              >
                提示文字描述提示文字描述提示文字描述提示文字描述提示文字描述提示文字描述提示文字描述 
                <!--v-if-->
              </span>
            </div>
          </div>
        </div>
        <!--v-if-->
      </div>
    </div>
    <div
      class="t-notice-bar t-notice-bar--info"
    >
      <div
        class="t-notice-bar__inner"
      >
        <div
          class="t-notice-bar__hd"
        >
          <svg
            class="t-icon t-icon-info-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
        <div
          class="t-notice-bar__bd"
        >
          <div
            class="t-notice-bar__list"
          >
            <div
              class="t-notice-bar__item"
              style=""
            >
              <span
                class="t-notice-bar__text"
              >
                提示文字描述提示文字描述提示文字描述提示文字描述提示文字描述提示文字描述文字描述文字描述 
                <!--v-if-->
              </span>
            </div>
          </div>
        </div>
        <div
          class="t-notice-bar__ft"
        >
          <svg
            class="t-icon t-icon-chevron-right"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="t-notice-bar t-notice-bar--info"
    >
      <div
        class="t-notice-bar__inner"
      >
        <div
          class="t-notice-bar__hd"
        >
          <svg
            class="t-icon t-icon-info-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
        <div
          class="t-notice-bar__bd"
        >
          <div
            class="t-notice-bar__list"
          >
            <div
              class="t-notice-bar__item t-notice-bar__item-detail"
              style=""
            >
              <span
                class="t-notice-bar__text"
              >
                提示文字描述提示文字描述提示文字描述提示文字描述提示文字描述 
                <span
                  class="t-notice-bar__text-detail"
                >
                  详情
                </span>
              </span>
            </div>
          </div>
        </div>
        <div
          class="t-notice-bar__ft"
        >
          <svg
            class="t-icon t-icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
      </div>
    </div>
    
  </div>
</div>
`;

exports[`NoticeBar > NoticeBar scrollingVue demo works fine 1`] = `
<div
  class="noticebar-demo"
>
  <div
    class="tdesign-mobile-demo-block"
  >
    <!--v-if-->
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      滚动公告栏
    </p>
    
    <div
      class="t-notice-bar t-notice-bar--info"
    >
      <div
        class="t-notice-bar__inner"
      >
        <!--v-if-->
        <div
          class="t-notice-bar__bd"
        >
          <div
            class="t-notice-bar__list"
          >
            <div
              class="t-notice-bar__item"
              style=""
            >
              <span
                class="t-notice-bar__text"
              >
                提示文字描述提示文字描述提示文字描述提示文字描述文提示文字描述提示文字 
                <!--v-if-->
              </span>
            </div>
          </div>
        </div>
        <!--v-if-->
      </div>
    </div>
    <div
      class="t-notice-bar t-notice-bar--info"
    >
      <div
        class="t-notice-bar__inner"
      >
        <div
          class="t-notice-bar__hd"
        >
          <svg
            class="t-icon t-icon-info-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
        <div
          class="t-notice-bar__bd"
        >
          <div
            class="t-notice-bar__list"
          >
            <div
              class="t-notice-bar__item"
              style=""
            >
              <span
                class="t-notice-bar__text"
              >
                提示文字描述提示文字描述提示文字描述提示文字描述文提示文字描述提示文字 
                <!--v-if-->
              </span>
            </div>
          </div>
        </div>
        <!--v-if-->
      </div>
    </div>
    
  </div>
</div>
`;

exports[`NoticeBar > NoticeBar staticVue demo works fine 1`] = `
<div
  class="noticebar-demo"
>
  <div
    class="tdesign-mobile-demo-block"
  >
    <h2
      class="tdesign-mobile-demo-block__title"
    >
      visible属性
    </h2>
    <!--v-if-->
    
    <div
      class="t-notice-bar t-notice-bar--info"
    >
      <div
        class="t-notice-bar__inner"
      >
        <!--v-if-->
        <div
          class="t-notice-bar__bd"
        >
          <div
            class="t-notice-bar__list"
          >
            <div
              class="t-notice-bar__item"
              style=""
            >
              <span
                class="t-notice-bar__text"
              >
                提示文字描述提示文字描述提示文字描述 
                <!--v-if-->
              </span>
            </div>
          </div>
        </div>
        <!--v-if-->
      </div>
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <h2
      class="tdesign-mobile-demo-block__title"
    >
      v-model属性
    </h2>
    <!--v-if-->
    
    <div
      class="t-notice-bar t-notice-bar--info"
    >
      <div
        class="t-notice-bar__inner"
      >
        <!--v-if-->
        <div
          class="t-notice-bar__bd"
        >
          <div
            class="t-notice-bar__list"
          >
            <div
              class="t-notice-bar__item"
              style=""
            >
              <span
                class="t-notice-bar__text"
              >
                提示文字描述提示文字描述提示文字描述 
                <!--v-if-->
              </span>
            </div>
          </div>
        </div>
        <!--v-if-->
      </div>
    </div>
    
  </div>
</div>
`;

exports[`NoticeBar > NoticeBar themeVue demo works fine 1`] = `
<div
  class="noticebar-demo"
>
  <div
    class="tdesign-mobile-demo-block"
  >
    <h2
      class="tdesign-mobile-demo-block__title"
    >
      状态
    </h2>
    <!--v-if-->
    
    <div
      class="t-notice-bar t-notice-bar--info"
    >
      <div
        class="t-notice-bar__inner"
      >
        <div
          class="t-notice-bar__hd"
        >
          <svg
            class="t-icon t-icon-info-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
        <div
          class="t-notice-bar__bd"
        >
          <div
            class="t-notice-bar__list"
          >
            <div
              class="t-notice-bar__item"
              style=""
            >
              <span
                class="t-notice-bar__text"
              >
                默认状态公告栏默认状态公告栏 
                <!--v-if-->
              </span>
            </div>
          </div>
        </div>
        <!--v-if-->
      </div>
    </div>
    <div
      class="t-notice-bar t-notice-bar--success"
    >
      <div
        class="t-notice-bar__inner"
      >
        <div
          class="t-notice-bar__hd"
        >
          <svg
            class="t-icon t-icon-check-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 15A7 7 0 108 1a7 7 0 000 14zM4.5 8.2l.7-.7L7 9.3l3.8-3.8.7.7L7 10.7 4.5 8.2z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
        <div
          class="t-notice-bar__bd"
        >
          <div
            class="t-notice-bar__list"
          >
            <div
              class="t-notice-bar__item"
              style=""
            >
              <span
                class="t-notice-bar__text"
              >
                成功状态公告栏成功状态公告栏 
                <!--v-if-->
              </span>
            </div>
          </div>
        </div>
        <!--v-if-->
      </div>
    </div>
    <div
      class="t-notice-bar t-notice-bar--warning"
    >
      <div
        class="t-notice-bar__inner"
      >
        <div
          class="t-notice-bar__hd"
        >
          <svg
            class="t-icon t-icon-info-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
        <div
          class="t-notice-bar__bd"
        >
          <div
            class="t-notice-bar__list"
          >
            <div
              class="t-notice-bar__item"
              style=""
            >
              <span
                class="t-notice-bar__text"
              >
                警示状态公告栏警示状态公告栏 
                <!--v-if-->
              </span>
            </div>
          </div>
        </div>
        <!--v-if-->
      </div>
    </div>
    <div
      class="t-notice-bar t-notice-bar--error"
    >
      <div
        class="t-notice-bar__inner"
      >
        <div
          class="t-notice-bar__hd"
        >
          <svg
            class="t-icon t-icon-close-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
        <div
          class="t-notice-bar__bd"
        >
          <div
            class="t-notice-bar__list"
          >
            <div
              class="t-notice-bar__item"
              style=""
            >
              <span
                class="t-notice-bar__text"
              >
                错误状态公告栏错误状态公告栏 
                <!--v-if-->
              </span>
            </div>
          </div>
        </div>
        <!--v-if-->
      </div>
    </div>
    
  </div>
</div>
`;
